# TritonWebServer

./: .gitignore  CMakeLists.txt  HTTPGetRequest.cpp  HTTPGetRequest.hpp  HTTPGetResponse.cpp  HTTPGetResponse.hpp  HandleTCPClient.cpp  Makefile  PopulateResponse.cpp  README.md  RequestFramer.cpp  RequestFramer.hpp  RequestParser.cpp  RequestParser.hpp  ResponseBuilder.cpp  ResponseBuilder.hpp  httpd.cpp  httpd.hpp  main.cpp
files/: index.html
tests/: BadIndexTest  BadRequestTest  ExitRootTest  GoodIndexTest  NotFoundTest  TripleIndexTest
